--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="icon" href="img/tomato_16.png" type="image/png">
 
     <!-- ************************* CSS ************************* -->
-    <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/dist/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="http://getbootstrap.com/dist/css/bootstrap.min.css">-->
     <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/dc/1.7.3/dc.css">-->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/home.css">
 
 
