--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
             <div class="col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-6 basicTitle"><h4>Fiche signalétique</h4></div>
                 <div class="col-md-1">
-                    <a href="html/noteCreate.php"><button id="NoteCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche signalétique">
+                    <a href="html/sheetCreate.php"><button id="NoteCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche signalétique">
                         <img src="img/2.png" width="40px"/>
                     </button></a>
                 </div>
                 <div class="col-md-offset-1 col-md-1">
-                    <a href="html/noteList.php"><button id="NoteList" class="btn btn-default basicButton basicTitleOneLine" title="Liste des fiches signalétiques">
+                    <a href="html/sheetList.php"><button id="NoteList" class="btn btn-default basicButton basicTitleOneLine" title="Liste des fiches signalétiques">
                         <img src="img/10.png" width="40px"/>
                     </button></a>
                 </div>
