Change properties & names

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
         <div id="dateValue" class="row col-sm-12 col-md-12 text-left"></div>
-        <BR/><BR/><BR/><BR/><BR/>
+        <BR/><BR/><BR/><BR/>
 
         <!--<center><img src="img/PremiersMelons.JPG" width="500px"/></center>-->
 
@@ -58,12 +58,12 @@
             <div class="col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-6 basicTitle"><h4>Fiche signalétique</h4></div>
                 <div class="col-md-1">
-                    <a href="html/sheetCreate.php"><button id="NoteCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche signalétique">
+                    <a href="html/vegetalSheetCreate.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche signalétique">
                         <img src="img/2.png" width="40px"/>
                     </button></a>
                 </div>
                 <div class="col-md-offset-1 col-md-1">
-                    <a href="html/sheetList.php"><button id="NoteList" class="btn btn-default basicButton basicTitleOneLine" title="Liste des fiches signalétiques">
+                    <a href="html/vegetalSheetList.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Liste des fiches signalétiques">
                         <img src="img/10.png" width="40px"/>
                     </button></a>
                 </div>
@@ -72,14 +72,14 @@
             <div class="col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-6 basicTitle"><h4>Semis et Plantations</h4></div>
                 <div class="col-md-1">
-                    <button id="SawingCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir un semis">
+                    <a href="html/sawingSheetCreate.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche de culture">
                         <img src="img/11.png" width="40px"/>
-                    </button>
+                    </button></a>
                 </div>
                 <div class="col-md-offset-1 col-md-1">
-                    <button id="SawinList" class="btn btn-default basicButton basicTitleOneLine" title="Inventaire">
+                    <a href="html/sawingSheetList.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Inventaire">
                         <img src="img/16.png" width="40px"/>
-                    </button>
+                    </button></a>
                 </div>
             </div>
 
