Extend from CucurbitaMaxima & create sawing sheet

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 <script type="text/javascript">
     $(window).load(function() {
-        new CucurbitaMaximaHome().init();
+        new CucurbitaMaxima().init();
     });
 
 </script>
