--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
         <div class="row col-sm-12 col-md-12">
             <div class="col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-6 basicTitle"><h4>Fiche signalétique</h4></div>
-                <div class="col-md-1">
+                <div class="col-md-6">
                     <a href="html/vegetalSheetCreate.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche signalétique">
                         <img src="img/2.png" width="40px"/>
                     </button></a>
-                </div>
-                <div class="col-md-offset-1 col-md-1">
                     <a href="html/vegetalSheetList.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Liste des fiches signalétiques">
                         <img src="img/10.png" width="40px"/>
                     </button></a>
@@ -71,12 +69,10 @@
 
             <div class="col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-6 basicTitle"><h4>Semis et Plantations</h4></div>
-                <div class="col-md-1">
+                <div class="col-md-6">
                     <a href="html/sawingSheetCreate.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche de culture">
                         <img src="img/11.png" width="40px"/>
                     </button></a>
-                </div>
-                <div class="col-md-offset-1 col-md-1">
                     <a href="html/sawingSheetList.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Inventaire">
                         <img src="img/16.png" width="40px"/>
                     </button></a>
@@ -84,13 +80,14 @@
             </div>
 
             <div class="col-md-offset-1 row col-md-3 basicDiv">
-                <div class="col-md-6 basicTitleOneLine"><h4>Récoltes</h4></div>
-                <div class="col-md-1">
+                <div class="col-md-5 basicTitleOneLine"><h4>Récoltes</h4></div>
+                <div class="col-md-7">
+                    <button id="CropForecast" class="btn btn-default basicButton basicTitleOneLine" title="Prévision des récoltes">
+                        <img src="img/78.png" width="40px"/>
+                    </button>
                     <button id="CropCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une récolte">
                         <img src="img/11.png" width="40px"/>
                     </button>
-                </div>
-                <div class="col-md-offset-1 col-md-1">
                     <button id="CropList" class="btn btn-default basicButton basicTitleOneLine" title="Production">
                         <img src="img/16.png" width="40px"/>
                     </button>
