--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <div class="col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-5 basicTitleOneLine"><h4>Récoltes</h4></div>
                 <div class="col-md-7">
-                    <button id="CropForecast" class="btn btn-default basicButton basicTitleOneLine" title="Prévision des récoltes">
+                    <a href="html/forecast.php"><button id="CropForecast" class="btn btn-default basicButton basicTitleOneLine" title="Prévision des récoltes">
                         <img src="img/78.png" width="40px"/>
-                    </button>
+                    </button></a>
                     <button id="CropCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une récolte">
                         <img src="img/11.png" width="40px"/>
                     </button>
