--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.11/crossfilter.min.js"></script>-->
     <!--<script type="text/javascript" src="dc.js"></script>-->
     <script type="text/javascript" src="js/library/jquery.i18n.properties-1.0.9.js"></script>
+    <script type="text/javascript" src="js/library/d3.js"></script>
+
     <script type="text/javascript" src="js/cucurbitaMaxima.js"></script>
 
 
