Correct save form for sawing & vegetal

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="js/library/jquery.i18n.properties-1.0.9.js"></script>
     <script type="text/javascript" src="js/library/d3.js"></script>
 
+    <script type="text/javascript" src="js/helper.js"></script>
     <script type="text/javascript" src="js/cucurbitaMaxima.js"></script>
 
 
@@ -47,14 +48,15 @@
 <BODY>
 
 <div class="container">
+    <div class="row col-sm-12 col-md-12">
+        <div id="dateValue" class=" col-md-14 text-left"></div>
+    </div>
+
     <div class="row col-sm-12 col-md-12 text-center">
         <h1>Cucurbita Maxima</h1><BR/>
 
 
-        <div id="dateValue" class="row col-sm-12 col-md-12 text-left"></div>
         <BR/><BR/><BR/><BR/>
-
-        <!--<center><img src="img/PremiersMelons.JPG" width="500px"/></center>-->
 
         <div class="row col-sm-12 col-md-12">
             <div class="col-md-offset-1 row col-md-3 basicDiv">
