--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 <div class="container">
     <div class="row col-sm-12 col-md-12">
-        <div id="dateValue" class=" col-md-14 text-left"></div>
+        <div class="row col-md-1"><img id="season" src="" width="50px" title=""/></div>
+        <div id="dateValue" class="row col-md-10 text-left"></div>
     </div>
 
     <div class="row col-sm-12 col-md-12 text-center">
