--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
     <!--<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>-->
     <script type="text/javascript" src="js/library/jquery-ui-1.10.4.custom.min.js"></script>
 
+    <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.11/crossfilter.min.js"></script>-->
+    <!--<script type="text/javascript" src="dc.js"></script>-->
+    <script type="text/javascript" src="js/library/jquery.i18n.properties-1.0.9.js"></script>
+    <script type="text/javascript" src="js/library/d3.js"></script>
+
     <!--<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
     <script type="text/javascript" src="js/bootstrap-3.1.1-dist/js/bootstrap.js"></script>
+    <!-- Tooltips -->
+    <script type="text/javascript" src="js/library/d3.tip.js"></script>
+
 
     <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.js"></script>-->
     <!--<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>-->
@@ -30,10 +38,10 @@
     <!--<script type="text/javascript" src="js/library/d3.tip.js"></script>-->
 
 
-    <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.11/crossfilter.min.js"></script>-->
-    <!--<script type="text/javascript" src="dc.js"></script>-->
-    <script type="text/javascript" src="js/library/jquery.i18n.properties-1.0.9.js"></script>
-    <script type="text/javascript" src="js/library/d3.js"></script>
+    <!-- Moon calendar -->
+    <script type="text/javascript" src="js/moonCalendar/astro.js"></script>
+    <script type="text/javascript" src="js/moonCalendar/degrees.js"></script>
+    <script type="text/javascript" src="js/moonCalendar/moon.js"></script>
 
     <script type="text/javascript" src="js/helper.js"></script>
     <script type="text/javascript" src="js/cucurbitaMaxima.js"></script>
@@ -47,27 +55,33 @@
 
 <BODY>
 
-<div class="container">
-    <div class="row col-sm-12 col-md-12">
-        <div class="row col-md-1"><img id="season" src="" width="50px" title=""/></div>
-        <div id="dateValue" class="row col-md-10 text-left"></div>
+<div class="container containerHome">
+    <div id="banner" class="row">
+        <div class="col-md-7">
+            <div class="col-md-4">
+                <img id="season" src="" width="50px" title=""/>&nbsp;
+                <img id="moon" src="" width="35px" title=""/>
+            </div>
+
+            <div id="dateValue" class="col-md-7"></div>
+            <div class="col-md-12"><BR/>Guérande : Altitude 50m <BR/>Longitude -2,429°, Latitude 47,328°</div>
+        </div>
+
+        <div class="col-md-3 text-center"><BR/>Zone climatique du littoral Atlantique :<BR/> 9 (-7°C à - 1°C)<BR/>Zone climatique continentale :<BR/> 8 (-12°C à -7°C)</div>
+        <div class="col-md-2"><img id="climateZones" src="img/ZonesClimatiques.jpeg"/></div>
     </div>
 
-    <div class="row col-sm-12 col-md-12 text-center">
-        <h1>Cucurbita Maxima</h1><BR/>
-
-
-        <BR/><BR/><BR/><BR/>
-
+    <BR/><BR/>
+    <div class="row text-center">
         <div class="row col-sm-12 col-md-12">
             <div class="col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-6 basicTitle"><h4>Fiche signalétique</h4></div>
                 <div class="col-md-6">
                     <a href="html/vegetalSheetCreate.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche signalétique">
-                        <img src="img/2.png" width="40px"/>
+                        <img src="img/2.png" width="50px"/>&nbsp;&nbsp;&nbsp;
                     </button></a>
                     <a href="html/vegetalSheetList.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Liste des fiches signalétiques">
-                        <img src="img/10.png" width="40px"/>
+                        <img src="img/10.png" width="50px"/>
                     </button></a>
                 </div>
             </div>
@@ -76,10 +90,10 @@
                 <div class="col-md-6 basicTitle"><h4>Semis et Plantations</h4></div>
                 <div class="col-md-6">
                     <a href="html/sawingSheetCreate.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche de culture">
-                        <img src="img/11.png" width="40px"/>
+                        <img src="img/11.png" width="50px"/>&nbsp;&nbsp;&nbsp;
                     </button></a>
                     <a href="html/sawingSheetList.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Inventaire">
-                        <img src="img/16.png" width="40px"/>
+                        <img src="img/16.png" width="50px"/>
                     </button></a>
                 </div>
             </div>
@@ -87,14 +101,11 @@
             <div class="col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-5 basicTitleOneLine"><h4>Récoltes</h4></div>
                 <div class="col-md-7">
-                    <a href="html/forecast.php"><button id="CropForecast" class="btn btn-default basicButton basicTitleOneLine" title="Prévision des récoltes">
-                        <img src="img/78.png" width="40px"/>
-                    </button></a>
                     <button id="CropCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une récolte">
-                        <img src="img/11.png" width="40px"/>
+                        <img src="img/11.png" width="50px"/>&nbsp;&nbsp;&nbsp;
                     </button>
                     <button id="CropList" class="btn btn-default basicButton basicTitleOneLine" title="Production">
-                        <img src="img/16.png" width="40px"/>
+                        <img src="img/16.png" width="50px"/>
                     </button>
                 </div>
             </div>
@@ -107,13 +118,18 @@
             </div>
 
             <div class="col-md-offset-1 row col-md-3 basicDiv">
-                <div class="col-md-10 basicTitle"><h4>Aromates Vivaces</h4></div>
+                <div class="col-md-11 basicTitle"><h4>Aromates Vivaces Plantes Compagnes</h4></div>
             </div>
 
-            <div class="col-md-offset-1 row col-md-3">
-                <div id="trolley"><img src="img/78.png"/></div>
+            <div id="actions" class="col-md-offset-1 row col-md-3">
+                <a href="html/statistics.php"><img src="img/statistics.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <img src="img/78.png"/></div>
             </div>
         </div>
+
+
+        <div class="row col-sm-12 col-md-12 text-right bottomBanner"><BR/><BR/><BR/>@Cucurbita Maxima 2015 _ v1.0<BR/><BR/></div>
+
     </div>
 
 </div>
