--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
     <script type="text/javascript" src="js/bootstrap-3.1.1-dist/js/bootstrap.js"></script>
     <!-- Tooltips -->
-    <script type="text/javascript" src="js/library/d3.tip.js"></script>
+    <!--<script type="text/javascript" src="js/library/d3.tip.js"></script>-->
 
 
     <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.js"></script>-->
