--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
 
 
-        <div class="row col-sm-12 col-md-12 text-right bottomBanner"><BR/><BR/><BR/>@Cucurbita Maxima 2015 _ v1.0<BR/><BR/></div>
+        <div class="row col-sm-12 col-md-12 text-right footer"><BR/><BR/><BR/>@Cucurbita Maxima 2015 _ v1.0<BR/><BR/></div>
 
     </div>
 
