--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
         <div class="row col-sm-12 col-md-12">
             <BR/><BR/>
             <div class="col-md-offset-1 row col-md-3 basicDiv">
-                <div class="col-md-10 basicTitle"><h4 title="Métadonnées : eau, pluie, sol" class="toolTipData">Données techniques</h4></div>
+                <a href="html/technicalInformations.php">
+                    <div class="col-md-10 basicTitle"><h4 title="Métadonnées : eau, pluie, sol" class="toolTipData">Données techniques</h4></div>
+                </a>
             </div>
 
             <div class="col-md-offset-1 row col-md-3 basicDiv">
@@ -124,13 +126,13 @@
             <div id="actions" class="col-md-offset-1 row col-md-3">
                 <a href="html/statistics.php"><img src="img/statistics.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="img/78.png"/></div>
-            </div>
         </div>
-
-
-        <div class="row col-sm-12 col-md-12 text-right footer"><BR/><BR/><BR/>@Cucurbita Maxima 2015 _ v1.0<BR/><BR/></div>
-
     </div>
+
+
+    <div class="row col-sm-12 col-md-12 text-right footer"><BR/><BR/><BR/>@Cucurbita Maxima 2015 _ v1.0<BR/><BR/></div>
+
+</div>
 
 </div>
 
