--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
             <div class="col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-5 basicTitleOneLine"><h4>Récoltes</h4></div>
                 <div class="col-md-7">
-                    <button id="CropCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une récolte">
+                    <a href="html/forecastSheetCreate.php"><button id="CropCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une récolte">
                         <img src="img/11.png" width="50px"/>&nbsp;&nbsp;&nbsp;
-                    </button>
+                    </button></a>
                     <button id="CropList" class="btn btn-default basicButton basicTitleOneLine" title="Production">
                         <img src="img/16.png" width="50px"/>
                     </button>
