--- a/index.html
+++ b/index.html
@@ -57,24 +57,24 @@
 
 <div class="container containerHome">
     <div id="banner" class="row">
-        <div class="col-md-7">
-            <div class="col-md-4">
+        <div class="col-xs-12 col-md-7">
+            <div class="col-xs-3 col-md-4">
                 <img id="season" src="" width="50px" title=""/>&nbsp;
                 <img id="moon" src="" width="35px" title=""/>
             </div>
 
-            <div id="dateValue" class="col-md-7"></div>
-            <div class="col-md-12"><BR/>Guérande : Altitude 50m <BR/>Longitude -2,429°, Latitude 47,328°</div>
+            <div id="dateValue" class="col-xs-9 col-md-7"></div>
+            <div class="col-xs-12 col-md-12"><BR/>Guérande : Altitude 50m <BR/>Longitude -2,429°, Latitude 47,328°</div>
         </div>
 
-        <div class="col-md-3 text-center"><BR/>Zone climatique du littoral Atlantique :<BR/> 9 (-7°C à - 1°C)<BR/>Zone climatique continentale :<BR/> 8 (-12°C à -7°C)</div>
-        <div class="col-md-2"><img id="climateZones" src="img/ZonesClimatiques.jpeg"/></div>
+        <div class="cols-xs-3 col-md-3 text-center"><BR/>Zone climatique du littoral Atlantique :<BR/> 9 (-7°C à - 1°C)<BR/>Zone climatique continentale :<BR/> 8 (-12°C à -7°C)</div>
+        <div class="col-xs-8 col-md-2"><img id="climateZones" src="img/ZonesClimatiques.jpeg"/></div>
     </div>
 
     <BR/><BR/>
     <div class="row text-center">
         <div class="row col-sm-12 col-md-12">
-            <div class="col-md-offset-1 row col-md-3 basicDiv">
+            <div class="col-xs-offset-1 col-xs-5 col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-6 basicTitle"><h4>Fiche signalétique</h4></div>
                 <div class="col-md-6">
                     <a href="html/vegetalSheetCreate.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche signalétique">
@@ -86,7 +86,7 @@
                 </div>
             </div>
 
-            <div class="col-md-offset-1 row col-md-3 basicDiv">
+            <div class="col-xs-offset-1 col-xs-5 col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-6 basicTitle"><h4>Semis et Plantations</h4></div>
                 <div class="col-md-6">
                     <a href="html/sawingSheetCreate.php"><button class="btn btn-default basicButton basicTitleOneLine" title="Saisir une fiche de culture">
@@ -98,7 +98,7 @@
                 </div>
             </div>
 
-            <div class="col-md-offset-1 row col-md-3 basicDiv">
+            <div class="col-xs-offset-1 col-xs-5 col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-5 basicTitleOneLine"><h4>Récoltes</h4></div>
                 <div class="col-md-7">
                     <a href="html/forecastSheetCreate.php"><button id="CropCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une récolte">
@@ -113,17 +113,17 @@
 
         <div class="row col-sm-12 col-md-12">
             <BR/><BR/>
-            <div class="col-md-offset-1 row col-md-3 basicDiv">
+            <div class="col-xs-offset-1 col-xs-5 col-md-offset-1 row col-md-3 basicDiv">
                 <a href="html/technicalInformations.php">
                     <div class="col-md-10 basicTitle"><h4 title="Métadonnées : eau, pluie, sol" class="toolTipData">Données techniques</h4></div>
                 </a>
             </div>
 
-            <div class="col-md-offset-1 row col-md-3 basicDiv">
+            <div class="col-xs-offset-1 col-xs-5 col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-11 basicTitle"><h4>Aromates Vivaces Plantes Compagnes</h4></div>
             </div>
 
-            <div id="actions" class="col-md-offset-1 row col-md-3">
+            <div id="actions" class="col-xs-12 col-md-offset-1 row col-md-3">
                 <a href="html/statistics.php"><img src="img/statistics.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="img/78.png"/></div>
         </div>
