--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <div class="col-xs-12 col-md-12"><BR/>Guérande : Altitude 50m <BR/>Longitude -2,429°, Latitude 47,328°</div>
         </div>
 
-        <div class="cols-xs-3 col-md-3 text-center"><BR/>Zone climatique du littoral Atlantique :<BR/> 9 (-7°C à - 1°C)<BR/>Zone climatique continentale :<BR/> 8 (-12°C à -7°C)</div>
-        <div class="col-xs-8 col-md-2"><img id="climateZones" src="img/ZonesClimatiques.jpeg"/></div>
+        <div class="col-xs-offset-6 col-xs-3 col-md-3 text-center"><BR/>Zone climatique du littoral Atlantique :<BR/> 9 (-7°C à - 1°C)<BR/>Zone climatique continentale :<BR/> 8 (-12°C à -7°C)</div>
+        <div class="col-xs-3 col-md-2"><img id="climateZones" src="img/ZonesClimatiques.jpeg"/></div>
     </div>
 
     <BR/><BR/>
