--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     <a href="html/forecastSheetCreate.php"><button id="CropCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une récolte">
                         <img src="img/11.png" width="50px"/>&nbsp;&nbsp;&nbsp;
                     </button></a>
-                    <button id="CropList" class="btn btn-default basicButton basicTitleOneLine" title="Production">
+                    <a href="html/forecastSheetList.php"><button id="CropList" class="btn btn-default basicButton basicTitleOneLine" title="Production">
                         <img src="img/16.png" width="50px"/>
-                    </button>
+                    </button></a>
                 </div>
             </div>
         </div>
