--- a/index.html
+++ b/index.html
@@ -58,17 +58,18 @@
 <div class="container containerHome">
     <div id="banner" class="row">
         <div class="col-xs-12 col-md-7">
-            <div class="col-xs-3 col-md-4">
+            <div class="col-xs-3 col-md-3">
                 <img id="season" src="" width="50px" title=""/>&nbsp;
                 <img id="moon" src="" width="35px" title=""/>
             </div>
 
-            <div id="dateValue" class="col-xs-9 col-md-7"></div>
+            <div id="dateValue" class="col-xs-9 col-md-9"></div>
             <div class="col-xs-12 col-md-12"><BR/>Guérande : Altitude 50m <BR/>Longitude -2,429°, Latitude 47,328°</div>
         </div>
 
-        <div class="col-xs-offset-6 col-xs-3 col-md-3 text-center"><BR/>Zone climatique du littoral Atlantique :<BR/> 9 (-7°C à - 1°C)<BR/>Zone climatique continentale :<BR/> 8 (-12°C à -7°C)</div>
+        <div class="col-xs-offset-3 col-xs-5 col-md-offset-0 col-md-3 text-center"><BR/>Zone climatique du littoral Atlantique :<BR/> 9 (-7°C à - 1°C)<BR/>Zone climatique continentale :<BR/> 8 (-12°C à -7°C)</div>
         <div class="col-xs-3 col-md-2"><img id="climateZones" src="img/ZonesClimatiques.jpeg"/></div>
+
     </div>
 
     <BR/><BR/>
