--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             <div class="col-xs-offset-1 col-xs-5 col-md-offset-1 row col-md-3 basicDiv">
                 <div class="col-md-5 basicTitleOneLine"><h4>Récoltes</h4></div>
                 <div class="col-md-7">
-                    <a href="html/forecastSheetCreate.php"><button id="CropCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une récolte">
+                    <a href="html/harvestSheetCreate.php"><button id="CropCreate" class="btn btn-default basicButton basicTitleOneLine" title="Saisir une récolte">
                         <img src="img/11.png" width="50px"/>&nbsp;&nbsp;&nbsp;
                     </button></a>
-                    <a href="html/forecastSheetList.php"><button id="CropList" class="btn btn-default basicButton basicTitleOneLine" title="Production">
+                    <a href="html/harvestSheetList.php"><button id="CropList" class="btn btn-default basicButton basicTitleOneLine" title="Production">
                         <img src="img/16.png" width="50px"/>
                     </button></a>
                 </div>
@@ -125,8 +125,9 @@
             </div>
 
             <div id="actions" class="col-xs-12 col-md-offset-1 row col-md-3">
-                <a href="html/statistics.php"><img src="img/statistics.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <img src="img/78.png"/></div>
+                <a href="html/harvestStatistics.php"><img src="img/statistics.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="html/harvestStatistics.php"><img src="img/78.png"/></a>
+            </div>
         </div>
     </div>
 
