--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
 
             <div id="actions" class="col-xs-12 col-md-offset-1 row col-md-3">
-                <a href="html/harvestStatistics.php"><img src="img/statistics.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="html/forecastStatistics.php"><img src="img/statistics.png" width="50px"/></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="html/harvestStatistics.php"><img src="img/78.png"/></a>
             </div>
         </div>
